Current:
  * Defer any try to change maxima's configuration until all questions are answered.
  * A menu item that sets the autosubscript feature for the current worksheet.

18.02:
  * More tooltips
  * A menu containing the most important commands for lists.
  * TableOfContents: A right-click menu item that allows to toggle display of section numbers
  * The size of images can now be restricted to any amount of centimeters.
  * On a few operating systems: The network indicator icon now knows how much CPU
    power maxima uses.
  * Autocompletion now suggests the names of built-in packages for load(), batch()
    and batchload().
  * Autocompletion now suggests the names of built-in demos for demo().
  * wxMaxima can now handle requests to display raw lisp elements.
  * A drop-down box for changing cell styles
  * If an input cell is hidden and has no output it now is no more displayed
    as a blank vertical space.
  * wxMaxima no more requires the icon files, tooltips and autocompletion files to be
    shipped as separate files, which makes creating a ready-to-install package of wxMaxima
    easier and less error-prone.
  * Autosave is now enabled by default on new installs.
  * Big code cleanups.
  * Many bugfixes
  * Many performance improvements
  * Dropped the autotools as the cmake build of wxMaxima is way more powerful.

17.10:
  * Jump to the char containing the error on encountering unmatched parenthesis.
  * Try to place the cursor near the error in all other cases.
  * Attempt to mark the whole error message in red. This is bound to fail in
    some cases as maxima sometimes only sends part of an error message through
    the error() command. But it is better than nothing.
  * Detect and mark most warnings.
  * A "evaluate cells below" right-click-menu item.
  * Autosave now even works for unsaved documents adding them to the
    "recent documents" list if needed.
  * Big parenthesis are now drawn using unicode characters, if available.