@@ -35,4 +35,4 @@ endif()
 if(UNIX)
     file(COPY ${DATAFILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endif() 
- 
+  
