@@ -1,6 +1,7 @@
 Current:
   * Defer any try to change maxima's configuration until all questions are answered.
   * A menu item that sets the autosubscript feature for the current worksheet.
+  * A menu allowing to switch floats to engineering format.
 
 18.02:
   * More tooltips
